examples/datalog/14_aggregations/08_global_count.dl.out
Executing script: examples/datalog/14_aggregations/08_global_count.dl

> .db create test_global_count
Database 'test_global_count' created.
Switched to database: test_global_count
> .db use test_global_count
Switched to database: test_global_count
> +event[(1, 10), (2, 10), (3, 20), (4, 10), (5, 20)].
Inserted 5 facts into 'event'.
> +total_events(count<Id>) :- event(Id, _).
Script error: Line 12: Parse error: Invalid term: 'count<Id>'
